--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">funmeeting-basket</string>
+    <string name="background_image">background image</string>
+    <string name="logo_of_app">logo of app</string>
+    <string name="next">Next</string>
+    <string name="co_ed">Co-Ed</string>
+    <string name="womens">Womens</string>
+    <string name="mens">Mens</string>
+    <string name="desired_league">Desired League</string>
+    <string name="go_all_in">GO ALL IN</string>
+    <string name="on_going_all_out">ON GOING ALL OUT</string>
+    <string name="find_the_team_in_your_city_and_dominate_the_league">Find the team in your city, and dominate the league</string>
+    <string name="get_started">GET STARTED</string>
+    <string name="skillbackground">skillbackground</string>
+    <string name="i_am_a">I am a:</string>
+    <string name="beginner">Beginner</string>
+    <string name="baller">Baller</string>
+    <string name="finish">Finish</string>
 </resources>
